--- a/otherorgs.html
+++ b/otherorgs.html
@@ -112,11 +112,11 @@
                     <p><a href="https://openhatch.org/">https://openhatch.org/</a></p>
                     <p>Open Hatch provides free community tools to help you learn about open source development. It’s a great place to get connected to open source developer and learn more about how to leverage them for social impact work.</p>
 
-                    <p>Think Big with ThoughtWorks</p>
+                    <p><b>Think Big with ThoughtWorks</b></p>
                     <p><a href="https://www.thoughtworks.com/">https://www.thoughtworks.com/</a></p>
                     <p>Thoughtworks is a for profit organization that provide technology consulting, hands-on technical help, design-thinking, and white papers around agile development.</p>
 
-                    <p>Data Help with DataKind</p>
+                    <p><b>Data Help with DataKind</b></p>
                     <p><a href="http://www.datakind.org/">http://www.datakind.org/</a></p>
                     <p>Datakind engages in helping on social impact projects through a robust data science service. They work as technical consultants to help organizations improve processes.</p>
 
@@ -128,7 +128,7 @@
                     <p><a href="http://www.caravanstudios.org/">http://www.caravanstudios.org/</a></p>
                     <p>Caravan Studios is a program of TechSoup Global that engages highly with the technology for impact community. They host quarterly Apps4Change Demo’s bringing social good techies into the room with nonprofits for demos and discussions. They also aid organizations in application development and have a few in-house social good apps they’ve built themselves.</p>
 
-                    <p>Fast Forward Accelerator for Tech Nonprofits</p>
+                    <p><b>Fast Forward Accelerator for Tech Nonprofits</b></p>
                     <p><a href="http://www.ffwd.org/">http://www.ffwd.org/"</a></p>
                    <p>Nonprofits that are highly technical can apply for the Fast Forward Accelerator program, which takes place over the summer and gives organizations access to a network of tech professionals who understand social impact.</p>
 
