--- a/accessibility.html
+++ b/accessibility.html
@@ -91,7 +91,59 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Accessibility Testing Tools</h1>
-                        <p>Coming soon...</p>
+                        <h1 style="font-size:32px;">Basic Guidelines for Accessible Web Development and Design</h1>
+<p>Making the web accessible for users that may be visually impaired is important today, but I'm sure many of us are unfamiliar with how exactly we do this.</p>
+<p>There are a number of basic features you should always include in your programming and design of a website - here is a quick checklist to get you started:</p>
+
+<h2>Web Development</h2>
+<ol>
+<li>All images should have <b>alt=" "</b> tags labeling the content in the image</li>
+<li>Semantic heading tags: headings should use h1,h2,h3,h4,h5,h6 to provide guidance on flow of the page</li>
+<li>Keyboard accessibility for buttons: (https://teachaccess.github.io/tutorial/#/5)</li>
+<li>Labels for forms: 
+<ul>
+<xmp>
+<div>
+    <label for="lastName">
+      Last name:
+    </label>
+    <input id="lastName" type="text">
+</div>
+</xmp>
+</ul>
+</li>
+<li>Accessible navigation menus (https://teachaccess.github.io/tutorial/#/10)
+<li>Semantic lists using ARIA roles:
+<ul>
+<xmp><div role="list">
+  <div role="listitem">Sea</div>
+  <div role="listitem">Surf</div>
+  <div role="listitem">Sun</div>
+</div>
+</xmp>
+</ul></li>
+</ol>
+
+<h2>Web Design</h2>
+<ol>
+<li>Color contrast should be WCAG AA compliant: http://webaim.org/resources/contrastchecker/</li>
+<li>Font style should be easy to read - sans serif</li>
+<li>Font size should be readable and should enlarge</li>
+<li>Using colors or patterns alone to indicate something will not be accessible to a blind users.</li>
+<li>Copy considerations (https://teachaccess.github.io/tutorial/#/17)</li>
+</ol>
+
+<h3>Key Terms</h3>
+<p>ARIA (Accessible Rich Internet Applications)</p>
+
+<h4>Website Testing Tools</h4>
+
+<p>WAVE by WebAIM for general website accessibility: http://wave.webaim.org/</p>
+<p>Juicy Studio’s Readability Test: http://juicystudio.com/services/readability.php</p>
+<p>Vischeck’s Color Blindness Checker: http://www.vischeck.com/</p>
+
+<h5>More Training Material:</h5>
+<p>Teach Access: <a href="http://teachaccess.org/initiatives/tutorial/">http://teachaccess.org/initiatives/tutorial/</a></p>
 
                         <hr style="border:1px solid #EEE;">
                         <p><h6 style="font-size:18px;">Next:</h6></p>
