--- a/accessibility.html
+++ b/accessibility.html
@@ -100,16 +100,13 @@
 <li>Semantic heading tags: headings should use h1,h2,h3,h4,h5,h6 to provide guidance on flow of the page</li>
 <li>Keyboard accessibility for buttons: (https://teachaccess.github.io/tutorial/#/5)</li>
 <li>Labels for forms: 
-<ul>
-<xmp>
-<div>
+<ul><xmp><div>
     <label for="lastName">
       Last name:
     </label>
     <input id="lastName" type="text">
 </div>
-</xmp>
-</ul>
+</xmp></ul>
 </li>
 <li>Accessible navigation menus (https://teachaccess.github.io/tutorial/#/10)
 <li>Semantic lists using ARIA roles:
