--- a/stack3.html
+++ b/stack3.html
@@ -91,12 +91,21 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Pick clear software stacks</h1>
+                        
                         <p>Your organization should have clear guidelines around the software stacks that you use. These guidelines should outline the specific links and places to go to download dependencies and this guideline sheet should stay updated at all times.</p>
-                        <h2>Example: Benetech Stacks</h2>
-                        <p><b>Java Development Stack:</b> Java, Thymeleaf, Eclipse</p>
-                        <p><b>Web Development Stack:</b> FlaskJS, EmberJS, BackboneJS, HTML, CSS, Wordpress</p>
-                        <p><b>Database and Hosting:</b> Amazon Web Services, WPEngine, Heroku</p>
-
+                        <h2>Example: Benetech Stacks:</h2>
+                        <p>
+                        <ul>
+                        <li>Postgres database</li>
+                        <li>AWS hosting services (EC2, RDS, S3, etc)</li>
+                        <li>Java 8 and Spring framework</li>
+                        <li>Mainstream UI template system (Freemarker, Thymeleaf)</li>
+                        <li>Mainstream UI libraries (jQuery, Bootstrap)</li>
+                        <li>Github code repository</li>
+                        <li>Jenkins build server</li>
+                        <li>The system would be constructed as a traditional server-based webapp written in Java.</li>
+                        </ul>
+                        </p>
                          <hr style="border:1px solid #EEE;">
                         <p><h4 style="font-size:18px;">Next Step:</h4></p>
                         <p><a href="qa4.html"><button class="btn btn-md btn-outline" style="margin:10px; padding:15px 40px;">Code Review and QA Process</button></a></p>
