--- a/accessibility.html
+++ b/accessibility.html
@@ -140,6 +140,8 @@
 
 <h5>More Training Material:</h5>
 <p>Teach Access: <a href="http://teachaccess.org/initiatives/tutorial/">http://teachaccess.org/initiatives/tutorial/</a></p>
+<p>Bentech Accessibility Guidelines: <a href="https://wiki.benetech.org/display/Main/Accessibility">https://wiki.benetech.org/display/Main/Accessibility</a></p>
+<p>WebAIM Accessibility Standards: <a href="http://webaim.org/standards/wcag/checklist">http://webaim.org/standards/wcag/checklist</a></p>                       
 
                         <hr style="border:1px solid #EEE;">
                         <p><h6 style="font-size:18px;">Next:</h6></p>
