--- a/hackevents.html
+++ b/hackevents.html
@@ -106,7 +106,7 @@
                         <li> Help volunteers get their development environments setup ahead of time </li>
                         <li> Provide very little noise and few distractions – light music is ok</li>
                         <li> Provide plenty of transportation options and free parking for developers</li>
-                        <li> Remember: recruiting efforts can make or break your event! </li>
+                        <li> Just Remember: recruiting efforts can make or break your event! </li>
                         </ul></p>
 
 
